# VkBullshit

./: .gitignore  CMakeLists.txt  README.md  compile-shaders.sh  main.cpp
include/: Application.hpp  CommandPool.hpp  Device.hpp  GraphicsPipeline.hpp  Messenger.hpp  QueueFamily.hpp  RenderPass.hpp  Renderer.hpp  SwapChain.hpp  Sync.hpp  Window.hpp  global.hpp
include/default/: BaseRenderer.hpp  DefaultCommandPool.hpp  DefaultRenderPass.hpp
include/geometry/: Vertex.hpp
include/ui/: UI.hpp  UICommandPool.hpp  UIRenderPass.hpp
lib/ImGui/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  CommandPool.cpp  Device.cpp  GraphicsPipeline.cpp  Messenger.cpp  QueueFamily.cpp  RenderPass.cpp  Renderer.cpp  SwapChain.cpp  Sync.cpp  Window.cpp
src/default/: BaseRenderer.cpp  CMakeLists.txt  DefaultCommandPool.cpp  DefaultRenderPass.cpp
src/geometry/: CMakeLists.txt  Vertex.cpp
src/ui/: CMakeLists.txt  UI.cpp  UICommandPool.cpp  UIRenderPass.cpp
