add_library(ImGui SHARED
    imgui.cpp
    imgui_draw.cpp
    imgui_impl_glfw.cpp
    imgui_impl_vulkan.cpp
    imgui_internal.h
    imgui_widgets.cpp
    imstb_textedit.h
    imconfig.h
    imgui_demo.cpp
    imgui.h
    imgui_impl_glfw.h
    imgui_impl_vulkan.h
    imgui_tables.cpp
    imstb_rectpack.h
    imstb_truetype.h
)
